new features: workflow resume option, module documentation; dropped pre-java11 support; some small bug fixes